{
    "name": "Controls",
    "maps": [
        {
            "name": "Touch",
            "id": "027526c5-59f0-46bd-8768-246a666b036b",
            "actions": [
                {
                    "name": "TouchDelta",
                    "type": "PassThrough",
                    "id": "cb4d1c87-93f6-4aa6-9087-b149f25ac878",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchStartPosition",
                    "type": "PassThrough",
                    "id": "07e72776-49d3-4be9-ab19-0b69e9f050b7",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "be812b2b-bbce-463a-ac81-4b792b7825fd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchRelease",
                    "type": "Button",
                    "id": "fc99cb7a-699b-4eb5-9913-fd5481c60187",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=1)",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "ff44ae7c-8e06-4a81-b8a1-127047cb4981",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TapCount",
                    "type": "PassThrough",
                    "id": "b1b98003-86b8-441d-abb6-ef4b3fc4a2a3",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press(behavior=2)",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0201f42b-d70f-4487-8ac0-4725f13fb1d7",
                    "path": "<Touchscreen>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4a9e804b-a2fc-4958-9433-ace7be6884af",
                    "path": "<Touchscreen>/touch0/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d1e135d5-2536-4202-ae99-6a35152a3680",
                    "path": "<Touchscreen>/touch0/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9bc343c1-fa92-435e-bf38-1ff194c68c61",
                    "path": "<Touchscreen>/touch0/startPosition",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchStartPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ef1d43e6-c61a-4ff6-8e9e-64494da2a44d",
                    "path": "<Touchscreen>/touch0/tapCount",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TapCount",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "282a2970-c556-4d27-9122-76d027a138b8",
                    "path": "<Touchscreen>/touch0/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchRelease",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Keyboard",
            "id": "f77b6aa7-cf9a-4fca-83b9-6f87d8acf6b1",
            "actions": [],
            "bindings": []
        }
    ],
    "controlSchemes": []
}